--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ pydantic_core==2.41.5
 python-dotenv==1.2.1
 python-jose==3.5.0
 python-settings==0.2.3
+redis==7.1.0
 rsa==4.9.1
 six==1.17.0
 SQLAlchemy==2.0.45
